parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    QUOTE

Grammar

Rule 0     S' -> statement
Rule 1     statement -> LCBRACE blocks RCBRACE
Rule 2     blocks -> block blocksl
Rule 3     blocksl -> block blocksl
Rule 4     block -> WHILE LPAREN expression RPAREN statement
Rule 5     block -> IF LPAREN expression RPAREN statement
Rule 6     block -> IF LPAREN expression RPAREN statement ELSE statement
Rule 7     blocksl -> <empty>
Rule 8     blocksl -> SEMI
Rule 9     blocks -> <empty>
Rule 10    block -> expression
Rule 11    expression -> PRINT LPAREN expression RPAREN SEMI
Rule 12    expression -> NAME EQUALS expression SEMI
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression MOD expression
Rule 18    expression -> expression EXPONENT expression
Rule 19    expression -> expression FDIV expression
Rule 20    expression -> MINUS expression
Rule 21    expression -> expression retrive EQUALS NAME SEMI
Rule 22    expression -> expression retrive
Rule 23    retrive -> LBRACKET NAME RBRACKET
Rule 24    retrive -> LBRACKET NUMBER RBRACKET
Rule 25    expression -> expression SMALLER expression
Rule 26    expression -> expression GREATER expression
Rule 27    expression -> expression SMALLEREQUAL expression
Rule 28    expression -> expression GREATEREQUAL expression
Rule 29    expression -> expression NOTEQUAL expression
Rule 30    expression -> expression DOUBLEEQUAL expression
Rule 31    expression -> expression AND expression
Rule 32    expression -> expression OR expression
Rule 33    expression -> expression IN expression
Rule 34    expression -> NOT expression
Rule 35    expression -> NUMBER
Rule 36    expression -> FLOAT
Rule 37    expression -> STRING
Rule 38    expression -> NAME
Rule 39    expression -> list
Rule 40    list -> LBRACKET list_tail RBRACKET
Rule 41    list_tail -> expression
Rule 42    list_tail -> expression COMMA list_tail
Rule 43    expression -> list LBRACKET expression RBRACKET

Terminals, with rules where they appear

AND                  : 31
COMMA                : 42
DIVIDE               : 16
DOUBLEEQUAL          : 30
ELSE                 : 6
EQUALS               : 12 21
EXPONENT             : 18
FDIV                 : 19
FLOAT                : 36
GREATER              : 26
GREATEREQUAL         : 28
IF                   : 5 6
IN                   : 33
LBRACKET             : 23 24 40 43
LCBRACE              : 1
LPAREN               : 4 5 6 11
MINUS                : 14 20
MOD                  : 17
NAME                 : 12 21 23 38
NOT                  : 34
NOTEQUAL             : 29
NUMBER               : 24 35
OR                   : 32
PLUS                 : 13
PRINT                : 11
QUOTE                : 
RBRACKET             : 23 24 40 43
RCBRACE              : 1
RPAREN               : 4 5 6 11
SEMI                 : 8 11 12 21
SMALLER              : 25
SMALLEREQUAL         : 27
STRING               : 37
TIMES                : 15
WHILE                : 4
error                : 

Nonterminals, with rules where they appear

block                : 2 3
blocks               : 1
blocksl              : 2 3
expression           : 4 5 6 10 11 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 21 22 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 41 42 43
list                 : 39 43
list_tail            : 40 42
retrive              : 21 22
statement            : 4 5 6 6 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . LCBRACE blocks RCBRACE

    LCBRACE         shift and go to state 1

    statement                      shift and go to state 2

state 1

    (1) statement -> LCBRACE . blocks RCBRACE
    (2) blocks -> . block blocksl
    (9) blocks -> .
    (4) block -> . WHILE LPAREN expression RPAREN statement
    (5) block -> . IF LPAREN expression RPAREN statement
    (6) block -> . IF LPAREN expression RPAREN statement ELSE statement
    (10) block -> . expression
    (11) expression -> . PRINT LPAREN expression RPAREN SEMI
    (12) expression -> . NAME EQUALS expression SEMI
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression EXPONENT expression
    (19) expression -> . expression FDIV expression
    (20) expression -> . MINUS expression
    (21) expression -> . expression retrive EQUALS NAME SEMI
    (22) expression -> . expression retrive
    (25) expression -> . expression SMALLER expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression SMALLEREQUAL expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression NOTEQUAL expression
    (30) expression -> . expression DOUBLEEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression IN expression
    (34) expression -> . NOT expression
    (35) expression -> . NUMBER
    (36) expression -> . FLOAT
    (37) expression -> . STRING
    (38) expression -> . NAME
    (39) expression -> . list
    (43) expression -> . list LBRACKET expression RBRACKET
    (40) list -> . LBRACKET list_tail RBRACKET

    RCBRACE         reduce using rule 9 (blocks -> .)
    WHILE           shift and go to state 5
    IF              shift and go to state 11
    PRINT           shift and go to state 14
    NAME            shift and go to state 4
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    NUMBER          shift and go to state 10
    FLOAT           shift and go to state 3
    STRING          shift and go to state 16
    LBRACKET        shift and go to state 12

    list                           shift and go to state 13
    block                          shift and go to state 9
    blocks                         shift and go to state 6
    expression                     shift and go to state 15

state 2

    (0) S' -> statement .



state 3

    (36) expression -> FLOAT .

    PLUS            reduce using rule 36 (expression -> FLOAT .)
    MINUS           reduce using rule 36 (expression -> FLOAT .)
    TIMES           reduce using rule 36 (expression -> FLOAT .)
    DIVIDE          reduce using rule 36 (expression -> FLOAT .)
    MOD             reduce using rule 36 (expression -> FLOAT .)
    EXPONENT        reduce using rule 36 (expression -> FLOAT .)
    FDIV            reduce using rule 36 (expression -> FLOAT .)
    SMALLER         reduce using rule 36 (expression -> FLOAT .)
    GREATER         reduce using rule 36 (expression -> FLOAT .)
    SMALLEREQUAL    reduce using rule 36 (expression -> FLOAT .)
    GREATEREQUAL    reduce using rule 36 (expression -> FLOAT .)
    NOTEQUAL        reduce using rule 36 (expression -> FLOAT .)
    DOUBLEEQUAL     reduce using rule 36 (expression -> FLOAT .)
    AND             reduce using rule 36 (expression -> FLOAT .)
    OR              reduce using rule 36 (expression -> FLOAT .)
    IN              reduce using rule 36 (expression -> FLOAT .)
    LBRACKET        reduce using rule 36 (expression -> FLOAT .)
    SEMI            reduce using rule 36 (expression -> FLOAT .)
    WHILE           reduce using rule 36 (expression -> FLOAT .)
    IF              reduce using rule 36 (expression -> FLOAT .)
    PRINT           reduce using rule 36 (expression -> FLOAT .)
    NAME            reduce using rule 36 (expression -> FLOAT .)
    NOT             reduce using rule 36 (expression -> FLOAT .)
    NUMBER          reduce using rule 36 (expression -> FLOAT .)
    FLOAT           reduce using rule 36 (expression -> FLOAT .)
    STRING          reduce using rule 36 (expression -> FLOAT .)
    RCBRACE         reduce using rule 36 (expression -> FLOAT .)
    COMMA           reduce using rule 36 (expression -> FLOAT .)
    RBRACKET        reduce using rule 36 (expression -> FLOAT .)
    RPAREN          reduce using rule 36 (expression -> FLOAT .)


state 4

    (12) expression -> NAME . EQUALS expression SEMI
    (38) expression -> NAME .

    EQUALS          shift and go to state 17
    PLUS            reduce using rule 38 (expression -> NAME .)
    MINUS           reduce using rule 38 (expression -> NAME .)
    TIMES           reduce using rule 38 (expression -> NAME .)
    DIVIDE          reduce using rule 38 (expression -> NAME .)
    MOD             reduce using rule 38 (expression -> NAME .)
    EXPONENT        reduce using rule 38 (expression -> NAME .)
    FDIV            reduce using rule 38 (expression -> NAME .)
    SMALLER         reduce using rule 38 (expression -> NAME .)
    GREATER         reduce using rule 38 (expression -> NAME .)
    SMALLEREQUAL    reduce using rule 38 (expression -> NAME .)
    GREATEREQUAL    reduce using rule 38 (expression -> NAME .)
    NOTEQUAL        reduce using rule 38 (expression -> NAME .)
    DOUBLEEQUAL     reduce using rule 38 (expression -> NAME .)
    AND             reduce using rule 38 (expression -> NAME .)
    OR              reduce using rule 38 (expression -> NAME .)
    IN              reduce using rule 38 (expression -> NAME .)
    LBRACKET        reduce using rule 38 (expression -> NAME .)
    SEMI            reduce using rule 38 (expression -> NAME .)
    WHILE           reduce using rule 38 (expression -> NAME .)
    IF              reduce using rule 38 (expression -> NAME .)
    PRINT           reduce using rule 38 (expression -> NAME .)
    NAME            reduce using rule 38 (expression -> NAME .)
    NOT             reduce using rule 38 (expression -> NAME .)
    NUMBER          reduce using rule 38 (expression -> NAME .)
    FLOAT           reduce using rule 38 (expression -> NAME .)
    STRING          reduce using rule 38 (expression -> NAME .)
    RCBRACE         reduce using rule 38 (expression -> NAME .)
    COMMA           reduce using rule 38 (expression -> NAME .)
    RBRACKET        reduce using rule 38 (expression -> NAME .)
    RPAREN          reduce using rule 38 (expression -> NAME .)


state 5

    (4) block -> WHILE . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 18


state 6

    (1) statement -> LCBRACE blocks . RCBRACE

    RCBRACE         shift and go to state 19


state 7

    (20) expression -> MINUS . expression
    (11) expression -> . PRINT LPAREN expression RPAREN SEMI
    (12) expression -> . NAME EQUALS expression SEMI
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression EXPONENT expression
    (19) expression -> . expression FDIV expression
    (20) expression -> . MINUS expression
    (21) expression -> . expression retrive EQUALS NAME SEMI
    (22) expression -> . expression retrive
    (25) expression -> . expression SMALLER expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression SMALLEREQUAL expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression NOTEQUAL expression
    (30) expression -> . expression DOUBLEEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression IN expression
    (34) expression -> . NOT expression
    (35) expression -> . NUMBER
    (36) expression -> . FLOAT
    (37) expression -> . STRING
    (38) expression -> . NAME
    (39) expression -> . list
    (43) expression -> . list LBRACKET expression RBRACKET
    (40) list -> . LBRACKET list_tail RBRACKET

    PRINT           shift and go to state 14
    NAME            shift and go to state 4
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    NUMBER          shift and go to state 10
    FLOAT           shift and go to state 3
    STRING          shift and go to state 16
    LBRACKET        shift and go to state 12

    list                           shift and go to state 13
    expression                     shift and go to state 20

state 8

    (34) expression -> NOT . expression
    (11) expression -> . PRINT LPAREN expression RPAREN SEMI
    (12) expression -> . NAME EQUALS expression SEMI
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression EXPONENT expression
    (19) expression -> . expression FDIV expression
    (20) expression -> . MINUS expression
    (21) expression -> . expression retrive EQUALS NAME SEMI
    (22) expression -> . expression retrive
    (25) expression -> . expression SMALLER expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression SMALLEREQUAL expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression NOTEQUAL expression
    (30) expression -> . expression DOUBLEEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression IN expression
    (34) expression -> . NOT expression
    (35) expression -> . NUMBER
    (36) expression -> . FLOAT
    (37) expression -> . STRING
    (38) expression -> . NAME
    (39) expression -> . list
    (43) expression -> . list LBRACKET expression RBRACKET
    (40) list -> . LBRACKET list_tail RBRACKET

    PRINT           shift and go to state 14
    NAME            shift and go to state 4
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    NUMBER          shift and go to state 10
    FLOAT           shift and go to state 3
    STRING          shift and go to state 16
    LBRACKET        shift and go to state 12

    list                           shift and go to state 13
    expression                     shift and go to state 21

state 9

    (2) blocks -> block . blocksl
    (3) blocksl -> . block blocksl
    (7) blocksl -> .
    (8) blocksl -> . SEMI
    (4) block -> . WHILE LPAREN expression RPAREN statement
    (5) block -> . IF LPAREN expression RPAREN statement
    (6) block -> . IF LPAREN expression RPAREN statement ELSE statement
    (10) block -> . expression
    (11) expression -> . PRINT LPAREN expression RPAREN SEMI
    (12) expression -> . NAME EQUALS expression SEMI
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression EXPONENT expression
    (19) expression -> . expression FDIV expression
    (20) expression -> . MINUS expression
    (21) expression -> . expression retrive EQUALS NAME SEMI
    (22) expression -> . expression retrive
    (25) expression -> . expression SMALLER expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression SMALLEREQUAL expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression NOTEQUAL expression
    (30) expression -> . expression DOUBLEEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression IN expression
    (34) expression -> . NOT expression
    (35) expression -> . NUMBER
    (36) expression -> . FLOAT
    (37) expression -> . STRING
    (38) expression -> . NAME
    (39) expression -> . list
    (43) expression -> . list LBRACKET expression RBRACKET
    (40) list -> . LBRACKET list_tail RBRACKET

    RCBRACE         reduce using rule 7 (blocksl -> .)
    SEMI            shift and go to state 24
    WHILE           shift and go to state 5
    IF              shift and go to state 11
    PRINT           shift and go to state 14
    NAME            shift and go to state 4
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    NUMBER          shift and go to state 10
    FLOAT           shift and go to state 3
    STRING          shift and go to state 16
    LBRACKET        shift and go to state 12

    list                           shift and go to state 13
    block                          shift and go to state 23
    expression                     shift and go to state 15
    blocksl                        shift and go to state 22

state 10

    (35) expression -> NUMBER .

    PLUS            reduce using rule 35 (expression -> NUMBER .)
    MINUS           reduce using rule 35 (expression -> NUMBER .)
    TIMES           reduce using rule 35 (expression -> NUMBER .)
    DIVIDE          reduce using rule 35 (expression -> NUMBER .)
    MOD             reduce using rule 35 (expression -> NUMBER .)
    EXPONENT        reduce using rule 35 (expression -> NUMBER .)
    FDIV            reduce using rule 35 (expression -> NUMBER .)
    SMALLER         reduce using rule 35 (expression -> NUMBER .)
    GREATER         reduce using rule 35 (expression -> NUMBER .)
    SMALLEREQUAL    reduce using rule 35 (expression -> NUMBER .)
    GREATEREQUAL    reduce using rule 35 (expression -> NUMBER .)
    NOTEQUAL        reduce using rule 35 (expression -> NUMBER .)
    DOUBLEEQUAL     reduce using rule 35 (expression -> NUMBER .)
    AND             reduce using rule 35 (expression -> NUMBER .)
    OR              reduce using rule 35 (expression -> NUMBER .)
    IN              reduce using rule 35 (expression -> NUMBER .)
    LBRACKET        reduce using rule 35 (expression -> NUMBER .)
    SEMI            reduce using rule 35 (expression -> NUMBER .)
    WHILE           reduce using rule 35 (expression -> NUMBER .)
    IF              reduce using rule 35 (expression -> NUMBER .)
    PRINT           reduce using rule 35 (expression -> NUMBER .)
    NAME            reduce using rule 35 (expression -> NUMBER .)
    NOT             reduce using rule 35 (expression -> NUMBER .)
    NUMBER          reduce using rule 35 (expression -> NUMBER .)
    FLOAT           reduce using rule 35 (expression -> NUMBER .)
    STRING          reduce using rule 35 (expression -> NUMBER .)
    RCBRACE         reduce using rule 35 (expression -> NUMBER .)
    COMMA           reduce using rule 35 (expression -> NUMBER .)
    RBRACKET        reduce using rule 35 (expression -> NUMBER .)
    RPAREN          reduce using rule 35 (expression -> NUMBER .)


state 11

    (5) block -> IF . LPAREN expression RPAREN statement
    (6) block -> IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN          shift and go to state 25


state 12

    (40) list -> LBRACKET . list_tail RBRACKET
    (41) list_tail -> . expression
    (42) list_tail -> . expression COMMA list_tail
    (11) expression -> . PRINT LPAREN expression RPAREN SEMI
    (12) expression -> . NAME EQUALS expression SEMI
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression EXPONENT expression
    (19) expression -> . expression FDIV expression
    (20) expression -> . MINUS expression
    (21) expression -> . expression retrive EQUALS NAME SEMI
    (22) expression -> . expression retrive
    (25) expression -> . expression SMALLER expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression SMALLEREQUAL expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression NOTEQUAL expression
    (30) expression -> . expression DOUBLEEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression IN expression
    (34) expression -> . NOT expression
    (35) expression -> . NUMBER
    (36) expression -> . FLOAT
    (37) expression -> . STRING
    (38) expression -> . NAME
    (39) expression -> . list
    (43) expression -> . list LBRACKET expression RBRACKET
    (40) list -> . LBRACKET list_tail RBRACKET

    PRINT           shift and go to state 14
    NAME            shift and go to state 4
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    NUMBER          shift and go to state 10
    FLOAT           shift and go to state 3
    STRING          shift and go to state 16
    LBRACKET        shift and go to state 12

    list                           shift and go to state 13
    expression                     shift and go to state 26
    list_tail                      shift and go to state 27

state 13

    (39) expression -> list .
    (43) expression -> list . LBRACKET expression RBRACKET

  ! shift/reduce conflict for LBRACKET resolved as shift
    PLUS            reduce using rule 39 (expression -> list .)
    MINUS           reduce using rule 39 (expression -> list .)
    TIMES           reduce using rule 39 (expression -> list .)
    DIVIDE          reduce using rule 39 (expression -> list .)
    MOD             reduce using rule 39 (expression -> list .)
    EXPONENT        reduce using rule 39 (expression -> list .)
    FDIV            reduce using rule 39 (expression -> list .)
    SMALLER         reduce using rule 39 (expression -> list .)
    GREATER         reduce using rule 39 (expression -> list .)
    SMALLEREQUAL    reduce using rule 39 (expression -> list .)
    GREATEREQUAL    reduce using rule 39 (expression -> list .)
    NOTEQUAL        reduce using rule 39 (expression -> list .)
    DOUBLEEQUAL     reduce using rule 39 (expression -> list .)
    AND             reduce using rule 39 (expression -> list .)
    OR              reduce using rule 39 (expression -> list .)
    IN              reduce using rule 39 (expression -> list .)
    SEMI            reduce using rule 39 (expression -> list .)
    WHILE           reduce using rule 39 (expression -> list .)
    IF              reduce using rule 39 (expression -> list .)
    PRINT           reduce using rule 39 (expression -> list .)
    NAME            reduce using rule 39 (expression -> list .)
    NOT             reduce using rule 39 (expression -> list .)
    NUMBER          reduce using rule 39 (expression -> list .)
    FLOAT           reduce using rule 39 (expression -> list .)
    STRING          reduce using rule 39 (expression -> list .)
    RCBRACE         reduce using rule 39 (expression -> list .)
    COMMA           reduce using rule 39 (expression -> list .)
    RBRACKET        reduce using rule 39 (expression -> list .)
    RPAREN          reduce using rule 39 (expression -> list .)
    LBRACKET        shift and go to state 28

  ! LBRACKET        [ reduce using rule 39 (expression -> list .) ]


state 14

    (11) expression -> PRINT . LPAREN expression RPAREN SEMI

    LPAREN          shift and go to state 29


state 15

    (10) block -> expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . MOD expression
    (18) expression -> expression . EXPONENT expression
    (19) expression -> expression . FDIV expression
    (21) expression -> expression . retrive EQUALS NAME SEMI
    (22) expression -> expression . retrive
    (25) expression -> expression . SMALLER expression
    (26) expression -> expression . GREATER expression
    (27) expression -> expression . SMALLEREQUAL expression
    (28) expression -> expression . GREATEREQUAL expression
    (29) expression -> expression . NOTEQUAL expression
    (30) expression -> expression . DOUBLEEQUAL expression
    (31) expression -> expression . AND expression
    (32) expression -> expression . OR expression
    (33) expression -> expression . IN expression
    (23) retrive -> . LBRACKET NAME RBRACKET
    (24) retrive -> . LBRACKET NUMBER RBRACKET
